--- a/frontend/app/globals.scss
+++ b/frontend/app/globals.scss
@@ -193,7 +193,7 @@ details {
 main {
   margin: 0 auto;
   padding: 6rem 0.5rem;
-  max-width: 90rem;
+  max-width: 120rem;
 }
 
 section {
